--- a/oz-variations-bcw/src/css/sheet.css
+++ b/oz-variations-bcw/src/css/sheet.css
@@ -93,8 +93,7 @@
   .oz-sticky-d-mid {
     display: flex;
     align-items: center;
-    gap: 8px;
-    flex: 1 1 0;
+    gap: 20px;
     min-width: 0;
     overflow: hidden;
   }
